name:                opengl-tutorial
version:             0.1.0.0
synopsis:            Haskell port of the OpenGL tutorials from http://www.opengl-tutorial.org
homepage:            https://github.com/kosmoskatten/opengl-tutorial
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmail.com
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable tutorial01
  main-is:             Tutorial01.hs
  other-modules:       Common.Window
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
                       , OpenGL >= 2.9
                       , GLFW-b >= 1.4
  hs-source-dirs:      src, src/Tutorial01
  default-language:    Haskell2010
  ghc-options:         -Wall

executable tutorial02
  main-is:             Tutorial02.hs
  other-modules:       Common.Shader
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
                       , OpenGL >= 2.9
                       , GLFW-b >= 1.4
                       , bytestring >= 0.10
  hs-source-dirs:      src, src/Tutorial02
  default-language:    Haskell2010
  ghc-options:         -Wall